[gd_scene load_steps=71 format=2]

[ext_resource path="res://assets/sprites/player/Splinter/Idle_03.png" type="Texture" id=1]
[ext_resource path="res://assets/sprites/player/Splinter/Idle_04.png" type="Texture" id=2]
[ext_resource path="res://assets/sprites/player/Splinter/Idle_00.png" type="Texture" id=3]
[ext_resource path="res://assets/sprites/player/Splinter/Idle_01.png" type="Texture" id=4]
[ext_resource path="res://assets/sprites/player/Splinter/Idle_02.png" type="Texture" id=5]
[ext_resource path="res://assets/sprites/player/Splinter/Idle_05.png" type="Texture" id=6]
[ext_resource path="res://assets/sprites/player/Splinter/Walk_05.png" type="Texture" id=7]
[ext_resource path="res://assets/sprites/player/Splinter/Idle_06.png" type="Texture" id=8]
[ext_resource path="res://assets/sprites/player/Splinter/Walk_01.png" type="Texture" id=9]
[ext_resource path="res://assets/sprites/player/Splinter/Idle_07.png" type="Texture" id=10]
[ext_resource path="res://assets/sprites/player/Splinter/Walk_07.png" type="Texture" id=11]
[ext_resource path="res://assets/sprites/player/Splinter/Walk_06.png" type="Texture" id=12]
[ext_resource path="res://assets/sprites/player/Splinter/Walk_00.png" type="Texture" id=13]
[ext_resource path="res://assets/sprites/player/Splinter/Walk_03.png" type="Texture" id=14]
[ext_resource path="res://assets/sprites/player/Splinter/Walk_04.png" type="Texture" id=15]
[ext_resource path="res://assets/sprites/player/Splinter/Walk_02.png" type="Texture" id=16]
[ext_resource path="res://assets/sprites/player/Splinter/WalkUp_07.png" type="Texture" id=17]
[ext_resource path="res://assets/sprites/player/Splinter/WalkUp_01.png" type="Texture" id=18]
[ext_resource path="res://assets/sprites/player/Splinter/WalkUp_00.png" type="Texture" id=19]
[ext_resource path="res://assets/sprites/player/Splinter/WalkUp_04.png" type="Texture" id=20]
[ext_resource path="res://assets/sprites/player/Splinter/WalkUp_05.png" type="Texture" id=21]
[ext_resource path="res://assets/sprites/player/Splinter/WalkUp_06.png" type="Texture" id=22]
[ext_resource path="res://assets/sprites/player/Splinter/WalkUp_02.png" type="Texture" id=23]
[ext_resource path="res://assets/sprites/player/Splinter/WalkUp_03.png" type="Texture" id=24]
[ext_resource path="res://assets/sprites/level/street.png" type="Texture" id=25]
[ext_resource path="res://Player.gd" type="Script" id=26]
[ext_resource path="res://assets/sprites/player/Splinter/Attack2_08.png" type="Texture" id=27]
[ext_resource path="res://assets/sprites/player/Splinter/Attack2_06.png" type="Texture" id=28]
[ext_resource path="res://assets/sprites/player/Splinter/Attack2_01.png" type="Texture" id=29]
[ext_resource path="res://assets/sprites/player/Splinter/Attack2_07.png" type="Texture" id=30]
[ext_resource path="res://assets/sprites/player/Splinter/Attack2_04.png" type="Texture" id=31]
[ext_resource path="res://assets/sprites/player/Splinter/Attack2_03.png" type="Texture" id=32]
[ext_resource path="res://assets/sprites/player/Splinter/Attack2_05.png" type="Texture" id=33]
[ext_resource path="res://assets/sprites/player/Splinter/Attack2_02.png" type="Texture" id=34]
[ext_resource path="res://assets/sprites/player/Splinter/Attack2_00.png" type="Texture" id=35]
[ext_resource path="res://SFX/Tank! (from Cowboy Bebop) by Yoko Kannoarr. John Wasson.mp3" type="AudioStream" id=36]
[ext_resource path="res://Game.gd" type="Script" id=37]
[ext_resource path="res://assets/sprites/player/npc1/Foot Soldier (Elite)/Idle_02.png" type="Texture" id=38]
[ext_resource path="res://assets/sprites/player/npc1/Foot Soldier (Elite)/Idle_03.png" type="Texture" id=39]
[ext_resource path="res://assets/sprites/player/npc1/Foot Soldier (Elite)/Idle_00.png" type="Texture" id=40]
[ext_resource path="res://assets/sprites/player/npc1/Foot Soldier (Elite)/Idle_01.png" type="Texture" id=41]
[ext_resource path="res://Ninja.gd" type="Script" id=42]
[ext_resource path="res://assets/sprites/player/npc1/Foot Soldier (Elite)/Hitstun_00.png" type="Texture" id=43]
[ext_resource path="res://assets/sprites/player/npc1/Foot Soldier (Elite)/Hitstun_01.png" type="Texture" id=44]
[ext_resource path="res://assets/sprites/pizza.png" type="Texture" id=45]
[ext_resource path="res://pizza.gd" type="Script" id=46]
[ext_resource path="res://assets/sprites/player/npc1/Foot Soldier (Elite)/Death_11.png" type="Texture" id=47]
[ext_resource path="res://assets/sprites/player/npc1/Foot Soldier (Elite)/Death_12.png" type="Texture" id=48]
[ext_resource path="res://assets/sprites/player/npc1/Foot Soldier (Elite)/Death_13.png" type="Texture" id=49]
[ext_resource path="res://assets/sprites/player/npc1/Foot Soldier (Elite)/Death_14.png" type="Texture" id=50]
[ext_resource path="res://assets/sprites/player/npc1/Foot Soldier (Elite)/Death_02.png" type="Texture" id=51]
[ext_resource path="res://assets/sprites/player/npc1/Foot Soldier (Elite)/Death_05.png" type="Texture" id=52]
[ext_resource path="res://assets/sprites/player/npc1/Foot Soldier (Elite)/Death_07.png" type="Texture" id=53]
[ext_resource path="res://assets/sprites/player/npc1/Foot Soldier (Elite)/Death_06.png" type="Texture" id=54]
[ext_resource path="res://assets/sprites/player/npc1/Foot Soldier (Elite)/Death_08.png" type="Texture" id=55]
[ext_resource path="res://assets/sprites/player/npc1/Foot Soldier (Elite)/Death_09.png" type="Texture" id=56]
[ext_resource path="res://assets/sprites/player/npc1/Foot Soldier (Elite)/Death_03.png" type="Texture" id=57]
[ext_resource path="res://assets/sprites/player/npc1/Foot Soldier (Elite)/Death_04.png" type="Texture" id=58]
[ext_resource path="res://assets/sprites/player/npc1/Foot Soldier (Elite)/Death_10.png" type="Texture" id=59]
[ext_resource path="res://assets/sprites/player/npc1/Foot Soldier (Elite)/Death_16.png" type="Texture" id=60]
[ext_resource path="res://assets/sprites/player/npc1/Foot Soldier (Elite)/Death_15.png" type="Texture" id=61]

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 768, 47.0938 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 15.25, 120 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 768, 16.5 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 13.375, 118.75 )

[sub_resource type="RectangleShape2D" id=9]
extents = Vector2( 6, 6 )

[sub_resource type="SpriteFrames" id=7]
animations = [ {
"frames": [ ExtResource( 51 ), ExtResource( 57 ), ExtResource( 58 ), ExtResource( 52 ), ExtResource( 54 ), ExtResource( 53 ), ExtResource( 55 ), ExtResource( 56 ), ExtResource( 59 ), ExtResource( 47 ), ExtResource( 48 ), ExtResource( 49 ), ExtResource( 50 ), ExtResource( 61 ), ExtResource( 60 ) ],
"loop": true,
"name": "destroyed",
"speed": 5.0
}, {
"frames": [ ExtResource( 43 ), ExtResource( 44 ) ],
"loop": true,
"name": "hitstun",
"speed": 5.0
}, {
"frames": [ ExtResource( 40 ), ExtResource( 41 ), ExtResource( 38 ), ExtResource( 39 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 35 ), ExtResource( 29 ), ExtResource( 34 ), ExtResource( 32 ), ExtResource( 31 ), ExtResource( 33 ), ExtResource( 28 ), ExtResource( 30 ), ExtResource( 27 ) ],
"loop": true,
"name": "attack_normal",
"speed": 15.0
}, {
"frames": [ ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 1 ), ExtResource( 2 ), ExtResource( 6 ), ExtResource( 8 ), ExtResource( 10 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 13 ), ExtResource( 9 ), ExtResource( 16 ), ExtResource( 14 ), ExtResource( 15 ), ExtResource( 7 ), ExtResource( 12 ), ExtResource( 11 ) ],
"loop": true,
"name": "walk",
"speed": 5.0
}, {
"frames": [ ExtResource( 19 ), ExtResource( 18 ), ExtResource( 23 ), ExtResource( 24 ), ExtResource( 20 ), ExtResource( 21 ), ExtResource( 22 ), ExtResource( 17 ) ],
"loop": true,
"name": "walkup",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 33, 31.5 )

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 18, 13.5 )

[node name="Game" type="Node2D"]
script = ExtResource( 37 )

[node name="Level 1" type="Node" parent="."]

[node name="Scenario" type="Node" parent="Level 1"]

[node name="background" type="Sprite" parent="Level 1/Scenario"]
position = Vector2( 691, 0 )
texture = ExtResource( 25 )

[node name="Wall" type="StaticBody2D" parent="Level 1/Scenario"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Level 1/Scenario/Wall"]
position = Vector2( 691, -71.0938 )
shape = SubResource( 3 )

[node name="VoidLeft" type="StaticBody2D" parent="Level 1/Scenario"]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Level 1/Scenario/VoidLeft"]
position = Vector2( -93, 1 )
shape = SubResource( 4 )

[node name="VoidBottom" type="StaticBody2D" parent="Level 1/Scenario"]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Level 1/Scenario/VoidBottom"]
position = Vector2( 691, 135 )
shape = SubResource( 5 )

[node name="StaticBody2D" type="StaticBody2D" parent="Level 1/Scenario"]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Level 1/Scenario/StaticBody2D"]
position = Vector2( 1472, 0 )
shape = SubResource( 6 )

[node name="pizza" type="Area2D" parent="Level 1"]
position = Vector2( 200, 90 )
collision_layer = 2
input_pickable = false
script = ExtResource( 46 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="Level 1/pizza"]
scale = Vector2( 0.02, 0.02 )
texture = ExtResource( 45 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Level 1/pizza"]
position = Vector2( 1, 0 )
shape = SubResource( 9 )
__meta__ = {
"_edit_group_": true
}

[node name="Ninja" type="Area2D" parent="Level 1"]
script = ExtResource( 42 )
__meta__ = {
"_edit_group_": true
}

[node name="AnimatedSprite" type="AnimatedSprite" parent="Level 1/Ninja"]
position = Vector2( 407, -33 )
frames = SubResource( 7 )
animation = "idle"
frame = 2
playing = true
flip_h = true
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Level 1/Ninja"]
position = Vector2( 404, 29.5 )
shape = SubResource( 9 )
__meta__ = {
"_edit_group_": true
}

[node name="Player" type="KinematicBody2D" parent="Level 1"]
position = Vector2( 10, -28 )
collision_layer = 3
script = ExtResource( 26 )
__meta__ = {
"_edit_group_": true
}

[node name="AnimatedSprite" type="AnimatedSprite" parent="Level 1/Player"]
position = Vector2( -10, -23 )
frames = SubResource( 2 )
animation = "idle"
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Level 1/Player"]
position = Vector2( -16, 43 )
shape = SubResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="Camera2D" type="Camera2D" parent="Level 1/Player"]
position = Vector2( 0, 5 )
offset = Vector2( 10, -10 )
current = true
zoom = Vector2( 0.5, 0.395 )
limit_left = -80
limit_top = -109
limit_right = 1448
limit_bottom = 120
drag_margin_h_enabled = true
drag_margin_v_enabled = true
smoothing_enabled = true
smoothing_speed = 10.0
editor_draw_limits = true

[node name="AttackArea" type="Area2D" parent="Level 1/Player" groups=["stick"]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Level 1/Player/AttackArea"]
position = Vector2( 73, 40.5 )
shape = SubResource( 8 )
disabled = true

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="Level 1"]
stream = ExtResource( 36 )
volume_db = -11.115
autoplay = true

[connection signal="area_entered" from="Level 1/pizza" to="Level 1/pizza" method="_on_pizza_area_entered"]
[connection signal="area_entered" from="Level 1/pizza" to="Level 1/Player" method="_on_pizza_area_entered"]
[connection signal="body_entered" from="Level 1/pizza" to="Level 1/pizza" method="_on_pizza_body_entered"]
[connection signal="body_entered" from="Level 1/pizza" to="Level 1/Player" method="_on_pizza_body_entered"]
[connection signal="area_entered" from="Level 1/Ninja" to="Level 1/Ninja" method="_on_Ninja_area_entered"]
[connection signal="animation_finished" from="Level 1/Ninja/AnimatedSprite" to="Level 1/Ninja" method="_on_AnimatedSprite_animation_finished"]
[connection signal="animation_finished" from="Level 1/Player/AnimatedSprite" to="Level 1/Player" method="_on_AnimatedSprite_animation_finished"]
