[gd_scene load_steps=73 format=2]

[ext_resource path="res://assets/sprites/player/Splinter/Attack2_01.png" type="Texture" id=1]
[ext_resource path="res://assets/sprites/player/Splinter/Attack2_06.png" type="Texture" id=2]
[ext_resource path="res://assets/sprites/player/Splinter/Attack2_04.png" type="Texture" id=3]
[ext_resource path="res://assets/sprites/player/Splinter/Attack2_05.png" type="Texture" id=4]
[ext_resource path="res://assets/sprites/player/Splinter/Attack2_07.png" type="Texture" id=5]
[ext_resource path="res://assets/sprites/player/Splinter/Attack2_03.png" type="Texture" id=6]
[ext_resource path="res://assets/sprites/player/Splinter/Attack2_02.png" type="Texture" id=7]
[ext_resource path="res://assets/sprites/player/Splinter/Attack2_00.png" type="Texture" id=8]
[ext_resource path="res://assets/sprites/player/Splinter/Walk_01.png" type="Texture" id=9]
[ext_resource path="res://assets/sprites/player/Splinter/Idle_05.png" type="Texture" id=10]
[ext_resource path="res://assets/sprites/player/Splinter/Idle_07.png" type="Texture" id=11]
[ext_resource path="res://assets/sprites/player/Splinter/Idle_00.png" type="Texture" id=12]
[ext_resource path="res://assets/sprites/player/Splinter/Idle_03.png" type="Texture" id=13]
[ext_resource path="res://assets/sprites/player/Splinter/Walk_05.png" type="Texture" id=14]
[ext_resource path="res://assets/sprites/player/Splinter/Walk_06.png" type="Texture" id=15]
[ext_resource path="res://assets/sprites/player/Splinter/Walk_04.png" type="Texture" id=16]
[ext_resource path="res://assets/sprites/player/Splinter/Walk_03.png" type="Texture" id=17]
[ext_resource path="res://assets/sprites/player/Splinter/WalkUp_07.png" type="Texture" id=18]
[ext_resource path="res://assets/sprites/player/Splinter/Walk_07.png" type="Texture" id=19]
[ext_resource path="res://assets/sprites/player/Splinter/WalkUp_01.png" type="Texture" id=20]
[ext_resource path="res://assets/sprites/player/Splinter/WalkUp_05.png" type="Texture" id=21]
[ext_resource path="res://assets/sprites/player/Splinter/Walk_02.png" type="Texture" id=22]
[ext_resource path="res://assets/sprites/player/Splinter/WalkUp_02.png" type="Texture" id=23]
[ext_resource path="res://assets/sprites/player/Splinter/WalkUp_03.png" type="Texture" id=24]
[ext_resource path="res://assets/sprites/player/Splinter/Idle_06.png" type="Texture" id=25]
[ext_resource path="res://assets/sprites/player/Splinter/WalkUp_00.png" type="Texture" id=26]
[ext_resource path="res://assets/sprites/player/Splinter/Idle_04.png" type="Texture" id=27]
[ext_resource path="res://assets/sprites/player/Splinter/WalkUp_04.png" type="Texture" id=28]
[ext_resource path="res://assets/sprites/player/Splinter/Idle_02.png" type="Texture" id=29]
[ext_resource path="res://assets/sprites/player/Splinter/Idle_01.png" type="Texture" id=30]
[ext_resource path="res://assets/sprites/player/Splinter/Walk_00.png" type="Texture" id=31]
[ext_resource path="res://assets/sprites/player/Splinter/WalkUp_06.png" type="Texture" id=32]
[ext_resource path="res://assets/sprites/player/Splinter/Attack2_08.png" type="Texture" id=33]
[ext_resource path="res://Player.gd" type="Script" id=34]
[ext_resource path="res://assets/sprites/player/Splinter/AttackFinisher_03.png" type="Texture" id=35]
[ext_resource path="res://assets/sprites/player/Splinter/AttackFinisher_07.png" type="Texture" id=36]
[ext_resource path="res://assets/sprites/player/Splinter/Hitstun1_04.png" type="Texture" id=37]
[ext_resource path="res://assets/sprites/player/Splinter/Hitstun1_02.png" type="Texture" id=38]
[ext_resource path="res://assets/sprites/player/Splinter/AttackFinisher_06.png" type="Texture" id=39]
[ext_resource path="res://assets/sprites/player/Splinter/AttackFinisher_00.png" type="Texture" id=40]
[ext_resource path="res://assets/sprites/player/Splinter/AttackFinisher_02.png" type="Texture" id=41]
[ext_resource path="res://assets/sprites/player/Splinter/AttackFinisher_01.png" type="Texture" id=42]
[ext_resource path="res://assets/sprites/player/Splinter/Hitstun1_06.png" type="Texture" id=43]
[ext_resource path="res://assets/sprites/player/Splinter/AttackFinisher_09.png" type="Texture" id=44]
[ext_resource path="res://assets/sprites/player/Splinter/AttackFinisher_08.png" type="Texture" id=45]
[ext_resource path="res://assets/sprites/player/Splinter/Hitstun1_05.png" type="Texture" id=46]
[ext_resource path="res://assets/sprites/player/Splinter/AttackFinisher_04.png" type="Texture" id=47]
[ext_resource path="res://assets/sprites/player/Splinter/AttackFinisher_05.png" type="Texture" id=48]
[ext_resource path="res://assets/sprites/player/Splinter/Hitstun1_01.png" type="Texture" id=49]
[ext_resource path="res://assets/sprites/player/Splinter/Hitstun1_00.png" type="Texture" id=50]
[ext_resource path="res://assets/sprites/player/Splinter/Hitstun1_03.png" type="Texture" id=51]
[ext_resource path="res://assets/sprites/player/Splinter/LevelcompleteStartup_00.png" type="Texture" id=52]
[ext_resource path="res://Dash.tscn" type="PackedScene" id=53]
[ext_resource path="res://assets/sprites/player/Splinter/LevelcompleteStartup_01.png" type="Texture" id=54]
[ext_resource path="res://assets/sprites/player/Splinter/LevelcompleteStartup_03.png" type="Texture" id=55]
[ext_resource path="res://assets/sprites/player/Splinter/LevelcompleteStartup_04.png" type="Texture" id=56]
[ext_resource path="res://assets/sprites/player/Splinter/LevelcompleteStartup_05.png" type="Texture" id=57]
[ext_resource path="res://assets/sprites/player/Splinter/LevelcompleteStartup_06.png" type="Texture" id=58]
[ext_resource path="res://assets/sprites/player/Splinter/LevelcompleteStartup_07.png" type="Texture" id=59]
[ext_resource path="res://assets/sprites/player/Splinter/LevelcompleteStartup_09.png" type="Texture" id=60]
[ext_resource path="res://assets/sprites/player/Splinter/LevelcompleteStartup_02.png" type="Texture" id=61]
[ext_resource path="res://assets/sprites/player/Splinter/LevelcompleteStartup_10.png" type="Texture" id=62]
[ext_resource path="res://assets/sprites/player/Splinter/LevelcompleteStartup_08.png" type="Texture" id=63]
[ext_resource path="res://assets/sprites/player/Splinter/LevelcompleteStartup_11.png" type="Texture" id=64]
[ext_resource path="res://assets/sprites/player/Splinter/LevelcompleteStartup_14.png" type="Texture" id=65]
[ext_resource path="res://assets/sprites/player/Splinter/LevelcompleteStartup_12.png" type="Texture" id=66]
[ext_resource path="res://assets/sprites/player/Splinter/LevelcompleteStartup_13.png" type="Texture" id=67]

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 40 ), ExtResource( 42 ), ExtResource( 41 ), ExtResource( 35 ), ExtResource( 47 ), ExtResource( 48 ), ExtResource( 39 ), ExtResource( 36 ), ExtResource( 45 ), ExtResource( 44 ) ],
"loop": true,
"name": "attack_bite",
"speed": 7.99
}, {
"frames": [ ExtResource( 8 ), ExtResource( 1 ), ExtResource( 7 ), ExtResource( 6 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 2 ), ExtResource( 5 ), ExtResource( 33 ) ],
"loop": true,
"name": "attack_normal",
"speed": 15.0
}, {
"frames": [ ExtResource( 50 ), ExtResource( 49 ), ExtResource( 38 ), ExtResource( 51 ), ExtResource( 37 ), ExtResource( 46 ), ExtResource( 43 ) ],
"loop": true,
"name": "hitstun",
"speed": 8.0
}, {
"frames": [ ExtResource( 12 ), ExtResource( 30 ), ExtResource( 29 ), ExtResource( 13 ), ExtResource( 27 ), ExtResource( 10 ), ExtResource( 25 ), ExtResource( 11 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 52 ), ExtResource( 54 ), ExtResource( 61 ), ExtResource( 55 ), ExtResource( 56 ), ExtResource( 57 ), ExtResource( 58 ), ExtResource( 59 ), ExtResource( 63 ), ExtResource( 60 ), ExtResource( 62 ), ExtResource( 64 ), ExtResource( 66 ), ExtResource( 67 ), ExtResource( 65 ) ],
"loop": true,
"name": "victory",
"speed": 5.0
}, {
"frames": [ ExtResource( 31 ), ExtResource( 9 ), ExtResource( 22 ), ExtResource( 17 ), ExtResource( 16 ), ExtResource( 14 ), ExtResource( 15 ), ExtResource( 19 ) ],
"loop": true,
"name": "walk",
"speed": 5.0
}, {
"frames": [ ExtResource( 26 ), ExtResource( 20 ), ExtResource( 23 ), ExtResource( 24 ), ExtResource( 28 ), ExtResource( 21 ), ExtResource( 32 ), ExtResource( 18 ) ],
"loop": true,
"name": "walkup",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 32.3167, 7.25 )

[sub_resource type="RectangleShape2D" id=13]

[sub_resource type="RectangleShape2D" id=12]
extents = Vector2( 16.5, 16 )

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 33, 31.5 )

[node name="Player" type="KinematicBody2D"]
collision_layer = 3
script = ExtResource( 34 )
dash_length = 0.2

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 4, -66 )
frames = SubResource( 2 )
animation = "victory"
frame = 10
speed_scale = 1.3
playing = true

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 0, 5 )
offset = Vector2( 10, -10 )
current = true
zoom = Vector2( 0.5, 0.395 )
limit_left = -80
limit_top = -109
limit_right = 1448
limit_bottom = 120
drag_margin_h_enabled = true
drag_margin_v_enabled = true
smoothing_enabled = true
smoothing_speed = 10.0
editor_draw_limits = true

[node name="AttackArea" type="Area2D" parent="." groups=["stick"]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackArea"]
position = Vector2( 70.5603, -1.25 )
scale = Vector2( 1.00754, 1 )
shape = SubResource( 8 )
disabled = true

[node name="attack_bite" type="CollisionShape2D" parent="AttackArea"]
position = Vector2( 34, 0 )
scale = Vector2( 2, 3 )
shape = SubResource( 13 )
disabled = true

[node name="HurtBox" type="Area2D" parent="."]
scale = Vector2( 2.0004, 1.96235 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox"]
shape = SubResource( 12 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Dash" parent="." instance=ExtResource( 53 )]
position = Vector2( 0, 0 )

[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="area_entered" from="HurtBox" to="." method="_on_HurtBox_area_entered"]
